# sfeGLI

./: CMakeLists.txt
cmake/: Install.cmake  Packaging.cmake
cmake/Modules/: FindGLI.cmake
examples/: Repositories - Verknüpfung.lnk
examples/demo/: CMakeLists.txt  main.cpp  test.ktx
include/sfeGLI/: Sprite.hpp  Texture.hpp  Visibility.hpp
src/: GL.cpp  GL.hpp  Sprite.cpp  Texture.cpp
